<resources>
    <string name="app_name">Agora-CloudGame-Example</string>
    <string name="home_dou_notice">再按一次退出</string>
    <string name="alert_dialog_message">OK</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="menu_gift">礼物</string>
    <string name="exit">退出</string>
    <string name="gift">礼物</string>
    <string name="comment">评论</string>
    <string name="z">Z(出兵)</string>
    <string name="like">点赞</string>
    <string name="game_state">游戏状态:</string>
    <string name="settings">设置</string>
    <string name="native_rtc">Native RTC</string>
    <string name="web_rtc">Web RTC</string>
    <string name="frame_rate">帧率:</string>
    <string name="dump_video_frame">Dump视频帧</string>
    <string name="input_room_id">请输入roomId</string>
    <string name="input_uid">请输入uid</string>

</resources>