<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/game_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/multi_background">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent">

                    <TextView
                        android:id="@+id/back_view"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/shape_finish_in_select"
                        android:gravity="center"
                        android:text="@string/exit"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/name_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/gift_view"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/shape_finish_in_select"
                        android:gravity="center"
                        android:text="@string/gift"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.Toolbar>
            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_state_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/game_state"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/game_state_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toRightOf="@id/game_state_label_tv"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


        <FrameLayout
            android:id="@+id/operator_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/comment_view"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape_finish_in_select"
                android:gravity="center"
                android:text="@string/comment"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/z_view"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_finish_in_select"
                android:gravity="center"
                android:text="@string/z"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/like_view"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginEnd="15dp"
                android:background="@drawable/shape_finish_in_select"
                android:gravity="center"
                android:text="@string/like"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </FrameLayout>

        <include
            android:id="@+id/input_bottom"
            layout="@layout/layout_comment_input" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>


